--- a/src/components/loader/bannerLoading.css
+++ b/src/components/loader/bannerLoading.css
@@ -1,15 +1,15 @@
-.banner {
+.banner.loadings {
     height: auto;
     width: 100%;
     background: #ffffff;
 }
 
-.banner .container {
+.banner.loadings .container {
     height: 100%;
     position: relative;
 }
 
-.banner .container .banner_content {
+.banner.loadings .container .banner_content {
     left: -100px;
     top: 96px;
     background: #ffffff;
@@ -18,7 +18,7 @@
     padding-bottom: 156px;
 }
 
-.banner .container .banner_content h1 {
+.banner.loadings .container .banner_content h1 {
     font-family: 'Muli', sans-serif;
     font-style: normal;
     font-weight: 800;
@@ -31,7 +31,7 @@
     height: 146px;
 }
 
-.banner .container .banner_content h1::after {
+.banner.loadings .container .banner_content h1::after {
     position: absolute;
     content: "";
     bottom: -16px;
@@ -41,7 +41,7 @@
     background: #f16334;
 }
 
-.banner .container .banner_content .text_area {
+.banner.loadings .container .banner_content .text_area {
     font-family: 'Muli', sans-serif;
     color: #7B7D84;
     font-weight: 400;
@@ -52,11 +52,11 @@
     font-size: 16px;
 }
 
-.banner .container .banner_content .price_tag {
+.banner.loadings .container .banner_content .price_tag {
     padding: 32px 0;
 }
 
-.banner .container .banner_content .price_tag h3 {
+.banner.loadings .container .banner_content .price_tag h3 {
     font-family: 'Muli', sans-serif;
     font-style: normal;
     font-weight: 700;
@@ -69,7 +69,7 @@
     padding-right: 8px;
 }
 
-.banner .container .banner_content .price_tag p {
+.banner.loadings .container .banner_content .price_tag p {
     font-family: 'Muli', sans-serif;
     color: #7B7D84;
     font-weight: 400;
@@ -80,7 +80,7 @@
     padding-top: 0.43780px;
 }
 
-.banner .container .banner_content a.place_btn {
+.banner.loadings .container .banner_content a.place_btn {
     padding: 0;
     margin: 0;
     background: transparent;
@@ -103,30 +103,30 @@
     text-transform: capitalize;
 }
 
-.banner .container .banner_content a.place_btn:hover {
+.banner.loadings .container .banner_content a.place_btn:hover {
     color: #ffffff !important;
     background-color: #f16334;
     border: 1px solid #f16334;
 }
 
-.banner .container .banner_content a.place_btn:focus {
+.banner.loadings .container .banner_content a.place_btn:focus {
     -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
     -moz-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
 }
 
-.banner .container .banner_bg {
+.banner.loadings .container .banner_bg {
     width: 100%;
     height: 100%;
 }
 
-.banner .container .banner_bg img {
+.banner.loadings .container .banner_bg img {
     width: 100%;
     height: 100%;
     object-fit: contain;
 }
 
-.banner .container .banner_bg {
+.banner.loadings .container .banner_bg {
     top: 0;
     right: -37%;
     width: 134%;
@@ -134,7 +134,7 @@
     position: absolute;
 }
 
-.banner .container .banner_bg img {
+.banner.loadings .container .banner_bg img {
     width: 100%;
     height: 100%;
     object-fit: contain;
