--- a/less/checkout01.less
+++ b/less/checkout01.less
@@ -64,4 +64,49 @@
       z-index: 1;
     }
   }
+  .summery {
+    padding: 24px;
+    background: #ffffff;
+    .titles {
+      .h4;
+      text-transform: capitalize;
+      padding-bottom: 24px;
+    }
+    .items {
+      padding: 24px 0;
+    }
+    .items,
+    .total {
+      .table {
+        margin: 0;
+        .text {
+          text-align: left;
+          font-weight: 400;
+          .h5;
+        }
+        .amount {
+          text-align: right;
+          .h5;
+          font-weight: 400;
+          color: #999ba1;
+        }
+        td,
+        th {
+          padding: 0.75rem 0;
+        }
+      }
+    }
+    .lines {
+      position: relative;
+      &::after {
+        .after;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 1px;
+        background: #eeeeee;
+      }
+    }
+  }
 }
