--- a/css/checkout01.css
+++ b/css/checkout01.css
@@ -330,7 +330,7 @@
   margin: 136px 0;
 }
 .checkout .heading {
-  margin-bottom: 56px;
+  margin-bottom: 40px;
 }
 .checkout .heading .steps {
   font-family: 'Muli', sans-serif;
@@ -362,6 +362,7 @@
   color: #7b7d84;
   color: #999ba1;
 }
+.checkout .uploads,
 .checkout .dropbox {
   position: relative;
   border: 2px dotted #dfe3eb;
@@ -372,7 +373,8 @@
   align-items: center;
   background-color: #f5f7fa;
 }
-.checkout .dropbox input#primary {
+.checkout .uploads input,
+.checkout .dropbox input {
   cursor: pointer;
   font-size: 18px;
   display: block;
@@ -386,9 +388,11 @@
   bottom: 0;
   opacity: 0;
 }
-.checkout .dropbox input#primary:focus {
+.checkout .uploads input:focus,
+.checkout .dropbox input:focus {
   outline: none;
 }
+.checkout .uploads h4,
 .checkout .dropbox h4 {
   font-family: 'Muli', sans-serif;
   font-style: normal;
@@ -399,6 +403,7 @@
   font-size: 20px;
   color: #7b7d84;
 }
+.checkout .uploads h6,
 .checkout .dropbox h6 {
   font-family: 'Muli', sans-serif;
   font-style: normal;
@@ -408,6 +413,7 @@
   color: #7b7d84;
   color: #999ba1;
 }
+.checkout .uploads .btn,
 .checkout .dropbox .btn {
   position: relative;
   z-index: 1;
@@ -474,4 +480,88 @@
   width: 100%;
   height: 1px;
   background: #eeeeee;
+}
+.checkout .singles,
+.checkout .uploads {
+  margin: 16px 0;
+}
+.checkout .uploads {
+  flex-direction: row;
+  justify-content: center;
+  padding: 26px 20px;
+}
+.checkout .singles {
+  position: relative;
+  background: #ffffff;
+  height: 80px;
+  margin: 16px 0;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.checkout .singles .imgs {
+  width: 133px;
+  background: #cccccc;
+  height: 100%;
+}
+.checkout .singles .imgs img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.checkout .singles .details {
+  margin-left: 22px;
+}
+.checkout .singles .details .title {
+  font-family: 'Muli', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #363840;
+}
+.checkout .singles .details .sizes {
+  font-family: 'Muli', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 170%;
+  color: #7b7d84;
+  margin-top: 4px;
+}
+.checkout .singles .remove {
+  position: absolute;
+  top: 8px;
+  right: 12px;
+  background: transparent;
+  border: 0;
+}
+.checkout .singles .remove:focus {
+  border: 0;
+  outline: 0;
+}
+.checkout .submits {
+  margin-top: 32px;
+}
+.checkout .submits .btn {
+  width: 100%;
+}
+.checkout .submits .btn:disabled {
+  color: #7b7d84 !important;
+  border-color: #7b7d84 !important;
+  cursor: no-drop;
+}
+.checkout .submits .btn:disabled:hover {
+  background: transparent;
+  color: #7b7d84 !important;
+  border-color: #7b7d84 !important;
+}
+.checkout .submits .cancel {
+  color: #363840 !important;
+  border: 1px solid #363840;
+}
+.checkout .submits .cancel:hover {
+  background: #eaedf2;
+  color: #363840 !important;
+  border: 1px solid #363840;
 }
