--- a/less/checkout01.less
+++ b/less/checkout01.less
@@ -6,7 +6,7 @@
 .checkout {
   margin: 136px 0;
   .heading {
-    margin-bottom: 56px;
+    margin-bottom: 40px;
     .steps {
       .h6;
       font-weight: 700;
@@ -23,6 +23,7 @@
       color: #999ba1;
     }
   }
+  .uploads,
   .dropbox {
     position: relative;
     border: 2px dotted #dfe3eb;
@@ -32,7 +33,8 @@
     flex-direction: column;
     align-items: center;
     background-color: #f5f7fa;
-    input#primary {
+
+    input {
       cursor: pointer;
       font-size: 18px;
       display: block;
@@ -107,6 +109,72 @@
         height: 1px;
         background: #eeeeee;
       }
+    }
+  }
+  .singles,
+  .uploads {
+    margin: 16px 0;
+  }
+  .uploads {
+    flex-direction: row;
+    justify-content: center;
+    padding: 26px 20px;
+  }
+  .singles {
+    position: relative;
+    background: #ffffff;
+    height: 80px;
+    margin: 16px 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    .imgs {
+      width: 133px;
+      background: #cccccc;
+      height: 100%;
+      img {
+        .img_css;
+      }
+    }
+    .details {
+      margin-left: 22px;
+      .title {
+        .h5;
+      }
+      .sizes {
+        .h6;
+        margin-top: 4px;
+      }
+    }
+    .remove {
+      position: absolute;
+      top: 8px;
+      right: 12px;
+      background: transparent;
+      border: 0;
+      &:focus {
+        border: 0;
+        outline: 0;
+      }
+    }
+  }
+  .submits {
+    margin-top: 32px;
+    .btn {
+      width: 100%;
+      &:disabled {
+        color: #7b7d84 !important;
+        border-color: #7b7d84 !important;
+        cursor: no-drop;
+        &:hover {
+          background: transparent;
+          color: #7b7d84 !important;
+          border-color: #7b7d84 !important;
+        }
+      }
+    }
+    .cancel {
+      .cancel;
     }
   }
 }
