--- a/less/checkout01.less
+++ b/less/checkout01.less
@@ -119,6 +119,11 @@
     flex-direction: row;
     justify-content: center;
     padding: 26px 20px;
+    color: @col3;
+    .title{
+      .h6;
+      color: @col3;
+    }
   }
   .singles {
     position: relative;
