--- a/less/checkout01.less
+++ b/less/checkout01.less
@@ -7,13 +7,13 @@
   .uploads,
   .dropbox {
     position: relative;
-    border: 2px dotted #dfe3eb;
+    border: 2px dotted @col5;
     padding: 38px 20px;
     border-radius: 6px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #f5f7fa;
+    background-color: @col5;
 
     input {
       cursor: pointer;
@@ -36,11 +36,11 @@
     h4 {
       .h4;
       font-size: 20px;
-      color: #7b7d84;
+      color: @col4;
     }
     h6 {
       .h6;
-      color: #999ba1;
+      color: @col4;
     }
     .btn {
       position: relative;
@@ -63,7 +63,7 @@
   }
   .singles {
     position: relative;
-    background: #ffffff;
+    background: @col1;
     height: 80px;
     margin: 16px 0;
     display: flex;
@@ -71,7 +71,7 @@
     align-items: center;
     .imgs {
       width: 133px;
-      background: #cccccc;
+      background: @col4;
       height: 100%;
       img {
         .img_css;
