--- a/less/checkout02.less
+++ b/less/checkout02.less
@@ -15,7 +15,7 @@
       .img-area {
         .tran(0.2s);
         height: 233px;
-        background: #ffffff;
+        background: @col1;
         display: block;
         width: 100%;
         img {
@@ -26,7 +26,7 @@
         .tran(0.2s);
         padding: 16px;
         text-align: center;
-        background: #ffffff;
+        background: @col1;
         display: block;
         border-top: 1px solid rgba(112, 112, 112, 0.3);
         h6 {
@@ -63,9 +63,9 @@
             top: 12px;
             width: 18px;
             height: 18px;
-            border: 1px solid #ddd;
+            border: 1px solid @col5;
             border-radius: 100%;
-            background: #f1f1f1;
+            background: @col5;
             z-index: 2;
           }
         }
