--- a/css/checkout05.css
+++ b/css/checkout05.css
@@ -353,174 +353,16 @@
     transform: translateY(-100%);
   }
 }
-.checkout {
-  margin: 136px 0;
-}
-.checkout .heading {
-  margin-bottom: 40px;
-}
-.checkout .heading .steps {
-  font-family: 'Muli', sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 170%;
-  color: #7b7d84;
-  font-weight: 700;
-  color: #999ba1;
-  margin-bottom: 16px;
-}
-.checkout .heading .titles {
-  font-family: 'Muli', sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 30px;
-  color: #363840;
-  font-size: 32px;
-  margin-bottom: 16px;
-  line-height: 40px;
-  text-transform: capitalize;
-}
-.checkout .heading .terms {
-  font-family: 'Muli', sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 170%;
-  color: #7b7d84;
-  color: #999ba1;
-}
-.checkout .summery {
-  padding: 24px;
-  background: #ffffff;
-}
-.checkout .summery .titles {
-  font-family: 'Muli', sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 170%;
-  color: #363840;
-  text-transform: capitalize;
-  padding-bottom: 24px;
-}
-.checkout .summery .items {
-  padding: 24px 0;
-}
-.checkout .summery .items .table,
-.checkout .summery .total .table {
-  margin: 0;
-}
-.checkout .summery .items .table .text,
-.checkout .summery .total .table .text {
-  text-align: left;
-  font-weight: 400;
-  font-family: 'Muli', sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 20px;
-  color: #363840;
-}
-.checkout .summery .items .table .amount,
-.checkout .summery .total .table .amount {
-  text-align: right;
-  font-family: 'Muli', sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 20px;
-  color: #363840;
-  font-weight: 400;
-  color: #999ba1;
-}
-.checkout .summery .items .table td,
-.checkout .summery .total .table td,
-.checkout .summery .items .table th,
-.checkout .summery .total .table th {
-  padding: 0.75rem 0;
-}
-.checkout .summery .lines {
-  position: relative;
-}
-.checkout .summery .lines::after {
-  position: absolute;
-  content: '';
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  height: 1px;
-  background: #eeeeee;
-}
-.checkout .submits {
-  margin-top: 32px;
-}
-.checkout .submits .btn {
-  width: 100%;
-}
-.checkout .submits .btn:disabled {
-  color: #7b7d84 !important;
-  border-color: #7b7d84 !important;
-  cursor: no-drop;
-}
-.checkout .submits .btn:disabled:hover {
-  background: transparent;
-  color: #7b7d84 !important;
-  border-color: #7b7d84 !important;
-}
-.checkout .submits .cancel {
-  color: #363840 !important;
-  border: 1px solid #363840;
-}
-.checkout .submits .cancel:hover {
-  background: #eaedf2;
-  color: #363840 !important;
-  border: 1px solid #363840;
-}
-.checkout .addons {
-  position: relative;
-  margin-bottom: 16px;
-  cursor: pointer;
-}
-.checkout .addons::before {
-  position: absolute;
-  content: '';
-  left: -30px;
-  top: 4px;
-  width: 18px;
-  height: 18px;
-  border: 1px solid #dfe3eb;
-  background: #fff;
-}
-.checkout .addons::after {
-  position: absolute;
-  content: '';
-  width: 8px;
-  height: 8px;
-  background: #f16334;
-  top: 9px;
-  left: -25px;
-  -webkit-transition: all 0.2s ease;
-  transition: all 0.2s ease;
-}
-.checkout .checks {
-  display: none;
-  position: absolute;
-  left: -16%;
-  z-index: -9999;
-}
-.checkout .checks:checked + .addons::after {
-  opacity: 1;
-  -webkit-transform: scale(1);
-  transform: scale(1);
-}
-.checkout .checks:not(:checked) + .addons::after {
-  opacity: 0;
-  -webkit-transform: scale(0);
-  transform: scale(0);
+.checkout .addons a {
+  color: #f16334;
 }
 .checkout label {
-  text-transform: capitalize;
+  margin-bottom: 8px;
+  font-family: 'Muli', sans-serif;
+  color: #7b7d84;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 12px;
+  line-height: 170%;
+  font-weight: 700;
 }
